--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
+    "mailjet": "^0.0.1",
+    "node-mailjet": "^6.0.2",
     "nodemailer": "^6.9.1"
   }
 }
